# fc2025

./: README.md  code_note.md
log/: latest_build
src/RtlToAutoTest/: setup.cfg  setup.py
src/install/: local_setup.sh  setup.sh
src/install/RtlToAutoTest/share/RtlToAutoTest/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/node_test/lib/node_test/: node
src/install/node_test/share/node_test/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/pose/lib/pose/: node
src/install/pose/share/pose/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/utils/: DropWayPointGen.py  location.py  quaternion.py  trajectory.py
src/install/vision/lib/vision/: node
src/install/vision/share/vision/: package.sh
src/install/visualize/lib/visualize/: pose_node  trajectory_node
src/install/visualize/share/visualize/: package.dsv  package.ps1  package.sh  package.xml
src/install/waypoint_gen/lib/waypoint_gen/: node
src/log/: latest_build
src/node_test/: package.xml  setup.py
src/node_test/node_test/: node_test.py
src/pose/: setup.py
src/pose/pose/: nodepose.py
src/utils/: 1111.py  CompeitionWaypointA.py  CompetitionWaypointGenNew.py  classes.py  pose.py
src/utils/test/: squad_points.txt
src/vision/: package.xml  setup.py
src/vision/vision/: vision.py
src/visualize/: setup.cfg  setup.py
src/visualize/launch/: visualize.launch.py
src/waypoint/: way1.txt
src/waypoint_gen/: package.xml  setup.cfg  setup.py
src/waypoint_gen/waypoint_gen/: node.py
(+5 files in other folders)
